<resources>
    <string name="alert_delete_title">Confirm</string>
    <string name="alert_detete_button_yes">Yes</string>
    <string name="alert_detete_button_no">No</string>
    <string name="toast_delete_entry">Successfully Deleted</string>
    <string name="alert_delete_message">Are you sure you want to delete?</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_country">Country</string>
    <string name="setting_money">Money</string>
    <string name="setting_language">Language</string>
    <string name="setting_photo_video_sync">Photo/Video Sync</string>
    <string name="hint_title">Title</string>
    <string name="hint_owner">Owner</string>
    <string name="hint_location">Location</string>
    <string name="hint_date_to_start">Date to start</string>
    <string name="hint_date_to_finish">Date to finish</string>
    <string name="hint_save">Save</string>
    <string name="hint_number">Number</string>
    <string name="hint_capacity">Capacity</string>
    <string name="hint_designation">Designation</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_price">Price</string>
    <string name="hint_amount">Amount : Quantity x Price</string>
    <string name="hint_amount_simple">Amount</string>
    <string name="hint_products_used">Products used</string>
    <string name="hint_comment">Comment...</string>
    <string name="hint_name">First and Last Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_mobile_tel">Mobile tel</string>
    <string name="hint_daily">Daily</string>
    <string name="hint_starting_animals">Starting Animals</string>
    <string name="hint_dead_animals">Dead Animals</string>
    <string name="hint_alive_animals">Alive Animals</string>
    <string name="hint_normal_egg">Normal Egg</string>
    <string name="hint_broken_egg">Broken Egg</string>
    <string name="hint_total_expenses">Total Expenses</string>
    <string name="hint_expenses_additional">Exp. Additional</string>
    <string name="hint_down_payment">Down Payment</string>
    <string name="hint_returned_expenses">Returned Expenses</string>
    <string name="hint_generate_report">Generate Report</string>
    <string name="hint_type">Type</string>
    <string name="hint_worker">Worker</string>
    <string name="hint_price_per_day">Price per day</string>
    <string name="hint_operation_name">Operation name</string>
    <string name="hint_operation_type">Type of operation</string>
    <string name="hint_todays_tasks">Todays Tasks</string>
    <string name="hint_syn">Synchronize</string>
    <string name="hint_temp">Temperature</string>
    <string name="hint_light">Light</string>
    <string name="hint_hum">Humidity</string>
    <string name="hint_save_it">Save it</string>
    <string name="hint_photo_description">Type Photo Description :</string>
    <string name="food_list">Food List</string>
    <string name="con">Consommation</string>
    <string name="active">Active</string>
    <string name="in_active">InActive</string>
    <string name="in_progress">In Progress</string>
    <string name="job_done">Job Done</string>
    <string name="log_out">Log Out</string>
    <string name="email_id">Email Id</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="new_member">New Member</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_again">Password Again</string>
    <string name="error_in_connection">Error in Connection</string>
    <string name="server_error">Server Error Connection Failed</string>
    <string name="authentication_failure">Authentication Failure</string>
    <string name="no_connection">No Connection</string>
    <string name="register">Register</string>
    <string name="worker_sendto_active">SEND TO ACTIVE</string>
    <string name="worker_sendto_inactive">SEND TO INACTIVE</string>
    <string name="fill_all_fields">Fill All Fields</string>
    <string name="saved_to">Saved to: </string>
    <string name="fill_the_description">Fill the Desciption</string>
    <string name="enter_the_description">Enter Desciption</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_image">User cancelled image capture</string>
    <string name="failed_image">Sorry! Failed to capture image</string>
    <string name="cancel_video">User cancelled video recording</string>
    <string name="failed_video">Sorry! Failed to record video</string>
    <string name="enter_valid_email">Enter valid Email-id</string>
    <string name="password_not_match">Passwords doesnot match</string>
    <string name="empty_uname_password">Username or Password is empty</string>
    <string name="no_animal">There are no Animals</string>
    <string name="succesfully_completed">Successfully completed</string>
    <string name="succesfully_updated">Successfully updated</string>
    <string name="succesfully_created">Successfully created</string>
    <string name="succesfully_notupdate">Error in updating</string>
    <string name="same_name">Same name exists</string>
    <string name="death_greater_zero">Number of death should greater then ZERO</string>
    <string name="death_less_total">Total number of deaths should less then total animals.</string>
    <string name="please_wait">Please wait</string>
    <string name="sync_finish">Synchronization Finished</string>
    <string name="sync">Synchronizing...</string>
    <string name="checking">Checking...</string>
    <string name="loading">Loading...</string>
    <string name="internet_not_available">Internet Not Available</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="nys">Notification(YES/NO)</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="choose_lan">Choose Language</string>
    <string name="sync_pv">Sync Photo/Video (YES/NO)</string>
    <string name="op_name">Operation name (select)</string>
    <string name="op_type">Operation type (select)</string>
    <string name="med_product">Medical Product</string>
    <string name="environment">Environment</string>
    <string name="various">Various</string>
    <string name="antibiotic">Antibiotic</string>
    <string name="vaccine">Vaccine</string>
    <string name="vitiamin">Vitamin</string>
    <string name="gas_litter">Gas Litter</string>
    <string name="hygiene">Hygiene</string>
    <string name="product">Product</string>
    <string name="other">Other</string>
    <string name="restart">Please restart the Application</string>
    <string name="uploading">Uploading</string>
    <string name="downloading">Downloading</string>
    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_egg_extra_screen">Egg</string>
    <string name="title_activity_show_equipement">Show Equipement</string>
    <string name="title_activity_show_animal">Show Animal</string>
    <string name="title_activity_equipment">Equipment</string>
    <string name="title_activity_add_equipment">Add Equipment</string>
    <string name="title_activity_camera_picture">Photoes</string>
    <string name="title_activity_show_worker">Show Worker</string>
    <string name="title_activity_add_worker">Add Worker</string>
    <string name="title_activity_worker">Worker</string>
    <string name="title_activity_add_food">Add Food</string>
    <string name="title_activity_show_food">Show Food</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_add_medical">Add Medical</string>
    <string name="title_activity_show_medical">Show Medical</string>
    <string name="title_activity_medical">Medical</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="title_activity_show_expense">Show Expense</string>
    <string name="title_activity_expense">Expense</string>
    <string name="title_activity_add_down_payment">Add DownPayment</string>
    <string name="title_activity_show_down_payment">Show DownPayment</string>
    <string name="title_activity_down_payment">DownPayment</string>
    <string name="title_activity_add_returned_expenses">Add Returned Expenses</string>
    <string name="title_activity_show_returned_expenses">Show Returned Expenses</string>
    <string name="title_activity_returned_expenses">Returned Expenses</string>
    <string name="title_activity_add_death">Add Death</string>
    <string name="title_activity_show_death">Show Death</string>
    <string name="title_activity_death">Death</string>
    <string name="title_activity_add_normal_egg">Add Normal Egg</string>
    <string name="title_activity_show_normal_egg">Show Normal Egg</string>
    <string name="title_activity_normal_egg">Normal Egg</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_add_cicle">Add Cicle</string>
    <string name="title_activity_show_cicle">Show Cicle</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_add_building">Add Building</string>
    <string name="title_activity_show_building">Show Building</string>
    <string name="title_activity_building">Building</string>
    <string name="title_activity_title_building">Title Building</string>
    <string name="title_activity_alive">Alive</string>
    <string name="title_activity_animals">Animals</string>
    <string name="title_activity_finianse">Finance</string>
    <string name="title_activity_food_consommation">Food Consommation</string>
    <string name="title_activity_note">note</string>
    <string name="title_activity_temp">Temperature</string>
    <string name="title_activity_todays_task">Todays Task</string>
    <string name="country_afg">Afghanistan</string>
    <string name="country_ago">Angola</string>
    <string name="country_are">United Arab Emirates</string>
    <string name="country_arg">Argentina</string>
    <string name="country_aus">Australia</string>
    <string name="country_aut">Austria</string>
    <string name="country_aze">Azerbaijan</string>
    <string name="country_bdi">Burundi</string>
    <string name="country_bel">Belgium</string>
    <string name="country_ben">Benin</string>
    <string name="country_bfa">Burkina Faso</string>
    <string name="country_bgd">Bangladesh</string>
    <string name="country_bgr">Bulgaria</string>
    <string name="country_bih">Bosnia and Herzegovina</string>
    <string name="country_blr">Belarus</string>
    <string name="country_bol">Bolivia</string>
    <string name="country_bra">Brazil</string>
    <string name="country_caf">Central African Republic</string>
    <string name="country_can">Canada</string>
    <string name="country_che">Switzerland</string>
    <string name="country_chl">Chile</string>
    <string name="country_chn">China</string>
    <string name="country_civ">Ivory Coast</string>
    <string name="country_cmr">Cameroon</string>
    <string name="country_cod">DR Congo</string>
    <string name="country_cog">Republic of the Congo</string>
    <string name="country_col">Colombia</string>
    <string name="country_cri">Costa Rica</string>
    <string name="country_cub">Cuba</string>
    <string name="country_cze">Czech Republic</string>
    <string name="country_deu">Germany</string>
    <string name="country_dnk">Denmark</string>
    <string name="country_dom">Dominican Republic</string>
    <string name="country_dza">Algeria</string>
    <string name="country_ecu">Ecuador</string>
    <string name="country_egy">Egypt</string>
    <string name="country_eri">Eritrea</string>
    <string name="country_esp">Spain</string>
    <string name="country_eth">Ethiopia</string>
</resources>