<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.himanshu.myapplication1.finance_screen"
    android:background="@color/yellow">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/head_yellow"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brown_alive_screen"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_total_expenses"
                android:id="@+id/textView25"
                android:textColor="@color/white"
                android:textSize="15dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15223135"
                    android:id="@+id/total_expense"
                    android:textSize="40dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="USD"
                    android:id="@+id/total_currency"
                    android:textSize="40dp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_expenses_additional"
                android:id="@+id/expense"
                android:layout_weight="1"
                android:background="@color/green_button_addCicle"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_down_payment"
                android:id="@+id/dp"
                android:layout_weight="1"
                android:background="@color/green_button_addCicle"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_returned_expenses"
                android:id="@+id/re"
                android:background="@color/orange_pink"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/hint_generate_report"
                android:id="@+id/generate_pdf"
                android:background="@color/pink_alive_screen"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/finance_listview"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>