<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/yellow"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Tasks">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/buttonshape"
                android:textAlignment="gravity"
                android:text="@string/hint_todays_tasks"
                android:textSize="25sp"
                android:id="@+id/task"
                android:layout_weight="1" />

            <View
                android:layout_height="10dp"
                android:layout_width="fill_parent"/>

            <Button
                android:layout_width="fill_parent"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:textAlignment="gravity"
                android:layout_height="wrap_content"
                android:text="@string/hint_syn"
                android:id="@+id/sync"
                android:layout_weight="1" />

            <View
                android:layout_height="10dp"
                android:layout_width="fill_parent"/>


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:id="@+id/log_out"
                android:background="@drawable/buttonshape"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_below="@+id/ll1"
        android:layout_weight="1"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <android.support.design.widget.TabLayout
                android:id="@+id/sliding_tabs"
                android:layout_width="match_parent"
                app:tabGravity="fill"
                android:layout_height="35dp"
                app:tabMode="fixed" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:background="@android:color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>